--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -1,5 +1,10 @@
 <html>
   <head>
+    <script src="http://code.jquery.com/jquery-1.12.0.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
+
     {% if title %}
     <title>{{ title }} - Flask starter project</title>
     {% else %}
@@ -9,6 +14,13 @@
   <body>
     <div>Navbar goes here</div>
     <hr>
+    {% with messages = get_flashed_messages() %}
+    {% if messages %}
+      {% for message in messages %}
+      <div class="alert alert-info" role="alert">{{ message }}</div><p>
+      {% endfor %}
+    {% endif %}
+    {% endwith %}
     {% block content %}{% endblock %}
   </body>
 </html>
