--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -1,4 +1,4 @@
 {% extends "base.html" %}
 {% block content %}
-  <h1>Hello from the index page</h1>
+  <h1>Welcome to your new app</h1>
 {% endblock %}
